fix: ensured img and text height were aligned.

--- a/stats-preview-card-component-main/css/styles.css
+++ b/stats-preview-card-component-main/css/styles.css
@@ -10,7 +10,7 @@
     --Very-dark-blue-: hsl(233, 47%, 7%);
     --Dark-desaturated-blue-: hsl(244, 38%, 16%);
     --Soft-violet-: hsl(277, 64%, 61%);
-    --White-: hsl(0, 0%, 100%);
+    --White: hsl(0, 0%, 100%);
     --Slightly-transparent-white1-: hsla(0, 0%, 100%, 0.75);
     --Slightly-transparent-white2-: hsla(0, 0%, 100%, 0.6);
 }
@@ -32,31 +32,37 @@ color: hsl(228, 45%, 44%);
 }
 
 body {
-    background-color: black;
     height: 100vh;
     font-family: 'Inter', sans-serif;
-
+    background-color: var(--Very-dark-blue-);
+    padding: 1.25rem;
+    font-size: 15px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
 }
 
 .card {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   border: 1px solid black;
-   border-radius: 12px;
+    max-width: 800px;
+    background-color: var(--Dark-desaturated-blue-);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: hidden;
+    border-radius: 12px;
+    margin: 1.5rem; 
 }
 
 .left {
-    color: white;
-    background-color: var(--dark-color);
-    width: 50%;
-    
+    padding: 3rem;
 }
 
 .left h2 {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
-    color: var(--White-);
+    color: var(--White);
     font-size: 1.6rem;
     line-height: 1.4;
     margin-bottom: 1.5rem;
@@ -95,6 +101,12 @@ ul {
     justify-content: space-between;
     align-items: center;
     margin-top: 3rem;
+}
+
+li {
+    color: var(--White);
+    font-size: 1.3rem;
+    text-transform: uppercase;
 }
 
 ul li span {
